  - message deletion is possible on message list [chilan]
  - configuration of visible queues for userpanel is possible [chilan]
  - www message type added [chilan]
  - lms-payments.php: monthly liability settlements support exact value calculations
    determined independently by number of days in each month [chilan]
  - userpanel: added helpdesk reply notifications [chilan]

version 1.11.14 (2013-03-25):

  - Fixed nodes list in Userpanel [alec]
  - lmsd/ewx-pt: Fixed issues on nodes deletion [alec]
  - lmsd/ewx-stm-channels: Fixed issues on nodes deletion, improved performance [alec]
  - lmsd/ewx-stm_channels: Added channel/customer limits checking [alec]
  - lmsd/ewx-stm_channels: Added channel half duplex setting [alec]
  - Fixed promotion assignments creation on MySQL [alec]
  - BTS#0000868: Fixed bug where country wasn't saved when adding customer [alec]
  - lms-notify-sms: Fixed wrong number prefix, when prefix was set to empty string [alec]
  - fixed bug in dbview bound to inproper Content-Length header [chilan]
  - daemon: disambiguation of halfduplex field usage in ewx-stm module [chilan]
  - Implemented nodes/devices localization database [alec]
  - lms-teryt: Script for Polish TERYT localization database import [alec]
  - Userpanel: added bank account to userinfobox [maniac]
  - Userpanel: reversed sorting of finance history [maniac]
  - Added bank account number to default invoice template [maniac]
  - lms-cutoff: added options to include only due payments and to extend paytime [maniac]
  - Userpanel: allow lms.ini to be virtual host dependend (like in UI) [maniac]
  - lmsd/ewx-pt: code rewrite, some improvements, added debug [alec]
  - RT: fixed replys to tickets created from userpanel with backend enabled [maniac]
  - BTS#0000880: Fixed transfer forms report printing [alec]
  - BTS#0000877: Fixed node assignments for all promotion periods [alec]
  - BTS#0000876: contrib/customer: Fixed customer tariff is always zero [alec]