@@ -1849,7 +1849,8 @@ $_LANG['service'] = 'usługa';
 $_LANG['Select tariff type'] = 'Wybierz typ taryfy';
 $_LANG['Date from the future not allowed!'] = 'Data z przyszłości nie jest dozwolona!';
 $_LANG['no guarantee'] = 'brak';
-$_LANG['Select days number of cutoff suspending (optional)'] = 'Wybierz ilość dni zawieszenia blokowania (opcjonalnie)';
+$_LANG['Select date of cutoff suspending (optional)'] = 'Wybierz datę zawieszenia blokowania (opcjonalnie)';
+$_LANG['Incorrect date of cutoff suspending!'] = 'Nieprawidłowa data zawieszenia blokowania!';
 $_LANG['Cutoff suspended to $a'] = 'Blokowanie zawieszone do dnia $a';
 $_LANG['Customer has got disconnected nodes!'] = 'Klient posiada odłączone komputery!';
 $_LANG['Clone'] = 'Klonuj';
