@@ -38,6 +38,7 @@ version ?.??.?? (????-??-??):
   - lms-payments.php: monthly liability settlements support exact value calculations
     determined independently by number of days in each month [chilan]
   - userpanel: added helpdesk reply notifications [chilan]
+  - customer cutoff of block suspending is displayed as calendar date [chilan]
 
 version 1.11.14 (2013-03-25):
 
